--- a/css/header.css
+++ b/css/header.css
@@ -1,113 +1,86 @@
 header {
-    display: grid;
-    grid-template-columns: auto 1fr auto auto;
-    margin: 0px 50px;
-  }
-  
+  display: grid;
+  grid-template-columns: auto 1fr auto auto;
+  margin: 0px 50px;
+}
+
 nav {
-    grid-column: 3;
-    align-self: start;
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  grid-column: 3;
+  align-self: start;
+  display: flex;
+  justify-content: space-between;
+}
+
 .signup {
-    grid-column: 4;
-    align-self: start;
-    display: flex;
-    justify-content: end;
-  }  
+  grid-column: 4;
+  align-self: start;
+  display: flex;
+  justify-content: end;
+}
 
 .signup a {
-    font-weight: bold;
-    color: #0065FC;
+  font-weight: bold;
+  color: #0065fc;
 }
 
 header img {
-    width: 94px;
-    height: 45px;
-    padding: 37px 0px 50px;
+  width: 94px;
+  height: 45px;
+  padding: 37px 0px 50px;
 }
 
 header a {
-    text-decoration: none;
-    color: black;
-    padding: 50px 22px 0px 22px;
-    border-top: 2px solid white;
+  text-decoration: none;
+  color: black;
+  padding: 50px 22px 0px 22px;
+  border-top: 2px solid white;
 }
 
 header nav a:first-child {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
+  color: #0065fc;
+  border-top: 2px solid #0065fc;
 }
 
 header nav a:last-child {
-    margin: 0px 24px;
+  margin: 0px 24px;
 }
 
-header a:hover {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
-}
+@media screen and (max-width: 992px) {
+  header {
+    grid-template-columns: 1fr 1fr;
+    margin: 0px 0px 36px 0px;
+  }
 
-@media screen and (max-width: 768px){
+  nav {
+    grid-row: 2;
+    grid-column: 1/3;
+    display: flex;
+    justify-content: space-around;
+  }
 
-    header {
-        grid-template-columns: 1fr 1fr;
-        margin: 0px 0px 36px 0px;
-    }
+  .signup {
+    grid-row: 1;
+    grid-column: 2;
+    margin-right: 20px;
+  }
 
-    nav {
-        grid-row: 2;
-        grid-column: 1/3;
-        display: flex;
-        justify-content: space-around;
-    }
+  header img {
+    padding: 37px 0px 0px 20px;
+  }
 
-    .signup {
-        grid-row: 1;
-        grid-column: 2;
-        margin-right: 50px;
-    }
+  header nav a {
+    padding: 40px 38px 20px 38px;
+    width: 50%;
+    text-align: center;
+  }
 
-    .signup a:hover {
-        border-top: 2px solid white;
-    }
+  header nav a:first-child {
+    border-bottom: 3px solid #0065fc;
+    border-top: none;
+  }
 
-    header img {
-        padding: 37px 0px 0px 50px;
-    }
-
-    header nav a {
-        padding: 40px 38px 20px 38px;
-        width: 50%;
-        text-align: center;
-    }
-
-    header nav a:first-child {
-        border-bottom: 3px solid #0065FC;
-        border-top: none;
-    }
-
-    header nav a:last-child {
-        margin: 0px;
-        border-bottom: 3px solid #F2F2F2;
-    }
-
-    header nav a:hover {
-        color: #0065FC;
-        border-bottom: 3px solid #0065FC;
-        border-top: none;
-    }
-}
-
-@media screen and (max-width: 576px){
-
-    header img {
-        padding: 37px 0px 0px 20px;
-    }
-
-    .signup {
-        margin-right: 20px;
-    }
+  header nav a:last-child {
+    margin: 0px;
+    border-bottom: 3px solid #f2f2f2;
+  }
 }
