--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 body {
-    font-family: "Raleway", Arial, Verdana, sans-serif;
-    margin: 0 auto;
-    width: 100%;
-}
-
-section {
-    margin: 0px 50px;
-}
-
-h1 {
-    font-size: 22px;
-}
-
-@media screen and (max-width: 576px){
-    
-    section {
-        margin: 0px 20px;
-    }
+  font-family: "Raleway", Arial, Verdana, sans-serif;
+  margin: 0 auto;
+  width: 100%;
 }
