feat: add comments

--- a/css/accommodationSection.css
+++ b/css/accommodationSection.css
@@ -143,6 +143,102 @@
   bottom: 5px;
 }
 
+/*************** Ordinateur Grand écran ***************/
+
+@media screen and (min-width: 1500px) {
+  .article h2 {
+    margin: 28px 0px 23px 50px;
+  }
+
+  .aside h2 {
+    margin: 28px 0px 0px 50px;
+  }
+
+  #accommodationSection {
+    flex-direction: column-reverse;
+    margin: 0px 50px;
+  }
+
+  .aside,
+  .article {
+    width: 100%;
+    margin: auto;
+    position: relative;
+  }
+
+  .aside {
+    margin-bottom: 20px;
+  }
+
+  .roomsAside {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 0px 50px;
+    column-gap: 30px;
+  }
+
+  .roomsAside a {
+    margin: 20px 0px 36px 0px;
+    flex-direction: column;
+    height: 218px;
+    width: auto;
+  }
+
+  .roomsAside img {
+    width: auto;
+    border-radius: 20px 20px 0px 0px;
+  }
+
+  .starsAside {
+    top: 72px;
+  }
+
+  .fa-chart-line {
+    position: absolute;
+    right: 50px;
+    top: 30px;
+  }
+
+  .descriptionAside {
+    padding: 5px 17px;
+    width: auto;
+  }
+
+  .roomsArticle {
+    display: grid;
+    margin: 0px 50px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    padding: 0px;
+    row-gap: 40px;
+  }
+
+  .roomsArticle a {
+    width: auto;
+    height: 218px;
+    margin: 0px;
+  }
+
+  .roomsArticle img {
+    width: -webkit-fill-available;
+  }
+
+  .descriptionArticle {
+    position: relative;
+  }
+
+  .starsArticle {
+    position: absolute;
+    top: 68px;
+  }
+
+  .displayMore {
+    margin: 20px 15px 0px;
+  }
+}
+
+/*************** Ordinateur Portable ***************/
+
 @media screen and (max-width: 1400px) {
   .article h2 {
     margin: 28px 0px 23px 50px;
@@ -235,6 +331,8 @@
   }
 }
 
+/*************** Petit Ordinateur Portable (1200px) ***************/
+
 @media screen and (max-width: 1200px) {
   .aside h2 {
     margin: 43px 0px 26px 50px;
@@ -271,6 +369,8 @@
     top: initial;
   }
 }
+
+/*************** Tablette façon Paysage ***************/
 
 @media screen and (max-width: 992px) {
   .article h2 {
@@ -322,6 +422,8 @@
     margin: 0px;
   }
 }
+
+/*************** Portable ***************/
 
 @media screen and (max-width: 576px) {
   .roomsAside img {
