--- a/css/footer.css
+++ b/css/footer.css
@@ -39,11 +39,15 @@ footer a {
   padding-top: 50px;
 }
 
+/*************** Tablette façon Paysage ***************/
+
 @media screen and (max-width: 992px) {
   .about {
     padding-left: 20px;
   }
 }
+
+/*************** Tablette ***************/
 
 @media screen and (max-width: 768px) {
   footer {
@@ -54,6 +58,8 @@ footer a {
     padding-left: 20px;
   }
 }
+
+/*************** Portable ***************/
 
 @media screen and (max-width: 576px) {
   footer {
